SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/Account_Industry_Segment__c.object-meta.xml
<CustomObject>
    <description>Stores the industry segment data of an account.</description>
    <label>Account Industry Segment</label>
    <nameField>
        <displayFormat>AIS-{00000}</displayFormat>
        <label>Account Industry Segment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Industry Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>