SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>SSP-288/SS2-T66 : Master Detail to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Industry Segments</relationshipLabel>
    <relationshipName>Account_Industry_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>