SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/fields/Account_IS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_IS_External_ID__c</fullName>
    <description>Account Industry Segment External ID (Customer ID + IS Code)</description>
    <externalId>true</externalId>
    <inlineHelpText>Account Industry Segment External ID (Customer ID + IS Code)</inlineHelpText>
    <label>Account IS External ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>