SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/fields/Global_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Global_Business_Unit__c</fullName>
    <description>Formula field to get corresponding &apos;Global Business Unit&apos; value from Custom Object &apos;Industry Segment&apos; using the Account Industry segment&apos;s  &apos;Industry Segment&apos; field value selected by User</description>
    <formula>Industry_Segment__r.Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-Populated based on the Industry Segment</inlineHelpText>
    <label>Global Business Unit</label>
    <type>Text</type>
</CustomField>