SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>SSP-288/SS2-T66: Master-Detail to custom Industry segment object</description>
    <label>Industry Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Industry_Segment_Data__c.Level__c</field>
            <operation>equals</operation>
            <value>Industry Segment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry_Segment_Data__c</referenceTo>
    <relationshipLabel>Account Industry Segments</relationshipLabel>
    <relationshipName>Account_Industry_Segments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>