SynProdGITV1/force-app/main/default/objects/Account_Industry_Segment__c/fields/Reporting_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Sub_Group__c</fullName>
    <description>Formula field to get corresponding &apos;Reporting Sub Group&apos; value from Custom Object &apos;Industry Segment&apos; using the Account Industry segment&apos;s &apos;Industry Segment&apos; field value selected by User</description>
    <formula>Industry_Segment__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-Populated based on the Industry Segment</inlineHelpText>
    <label>Reporting Sub Group</label>
    <type>Text</type>
</CustomField>